test-fixtures/machine-dsl-tests/tests/compile_fail/typed_state_has_no_fields_map.rs
use meerkat_machine_kernels::generated::meerkat;

fn main() {
    let state = meerkat::initial_state();
    let _ = state.fields.get("session_id");
}
